# app/Models/Departement.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Relations\HasMany;
+use Illuminate\Database\Eloquent\Model;
+
+class Departement extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'name',
+        'urut',
+        'description',
+    ];
+
+    public function users(): HasMany
+    {
+        return $this->hasMany(User::class, 'department_id');
+    }
+}
